--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "http://ainika-kos.github.io/github.io",
   "name": "blog",
   "version": "0.1.0",
   "private": true,
-  "homepage": "{add your homepage here}",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@testing-library/jest-dom": "^5.11.5",
@@ -18,7 +18,6 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "flexboxgrid": "^6.3.1",
-    "gh-pages": "^3.1.0",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
@@ -80,6 +79,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "gh-pages": "^3.1.0",
     "prettier": "2.1.2",
     "prettier-eslint": "11.0.0",
     "prettier-eslint-cli": "5.0.0"
