Changed page name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ainika-kos.github.io/github.io",
+  "homepage": "http://ainika-kos.github.io/snake",
   "name": "blog",
   "version": "0.1.0",
   "private": true,
