--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ainika-kos.github.io/react_snake",
+  "homepage": "https://ainika-kos.github.io/react_snake/",
   "name": "snake",
   "version": "0.1.0",
   "private": true,
